# evol-hercules

./: .gitignore  .gitlab-ci.yml  Makefile  Makefile.am  build.sh  configure.ac
src/: Makefile.am
src/char/: char.c  char.h  config.c  config.h  init.c
src/common/: config.c  config.h  init.c  init.h  interfaces.c  interfaces.h  ip.c
src/echar/: char.c  char.h  config.c  config.h  init.c
src/ecommon/: config.c  config.h  init.c  init.h  ip.c  ip.h  serverversion.h
src/ecommon/enum/: gender.h
src/ecommon/struct/: strutildata.h
src/ecommon/utils/: strutil.c  strutil.h
src/elogin/: config.c  config.h  init.c  login.c  login.h  md5calc.c  mt_rand.c  parse.c  parse.h  send.c  send.h
src/emap/: atcommand.c  atcommand.h  battle.c  battle.h  battleground.c  battleground.h  chrif.c  chrif.h  clan.c  clan.h  clif.c  clif.h  config.c  config.h  console.c  console.h  craft.c  craft.h  craftconf.c  craftconf.h  effects.h  hashtable.c  hashtable.h  homunculus.c  homunculus.h  horse.c  horse.h  init.c  inter.c  inter.h  itemdb.c  itemdb.h  lang.c  lang.h  mail.c  mail.h  map.c  map.h  mob.c  mob.h  (+30 more)
src/emap/const/: craft.h  skilldmaxeffects.h
src/emap/data/: bgd.c  bgd.h  itemd.c  itemd.h  mapd.c  mapd.h  mobd.c  mobd.h  npcd.c  npcd.h  session.c  session.h  skilld.c  skilld.h
src/emap/enum/: beingflag.h  esctype.h  esitype.h
src/emap/struct/: bgdext.h  itemdext.h  itempair.h  itempair2.h  mapdext.h  mobdext.h  npcdext.h  sessionext.h  skilldext.h  walldata2.h
src/emap/utils/: formatutils.c  formatutils.h
src/login/: config.c  config.h  init.c  login.c  login.h  md5calc.h  parse.c  parse.h  send.c  send.h
src/map/: atcommand.c  atcommand.h  clif.c  clif.h  dummy.c  dummy.h  init.c  itemdb.c  itemdb.h  lang.c  lang.h  mail.c  map.c  map.h  mapd.c  mapd.h  mapdext.h  mob.c  mob.h  npc.c  npc.h  parse.c  parse.h  pc.c  pc.h  permission.c  permission.h  quest.c  quest.h  script.c  script.h  scriptdefines.h  send.c  send.h  session.c  session.h  sessionext.h  skill.c  skill.h  status.c  (+3 more)
src/map/data/: itemd.c  itemd.h  mapd.c  npcd.c  npcd.h  session.c  session.h
src/map/struct/: itemdext.h  mapdext.h  npcdext.h  sessionext.h
src/map/utils/: formatutils.c
tools/: vars.sh
tools/ci/jobs/: clang10.sh  clang39.sh  clang6.sh  clang7.sh  clang8.sh  gcc46.sh  gcc48.sh  gcc49.sh  gcc5.sh  gcc6.sh  gcc7.sh  gcc8.sh  gcc9.sh  gccsnapshot.sh  validate.sh
tools/ci/scripts/: init.sh
vs12/: .gitignore  evolchar.vcxproj  evollogin.vcxproj  evolmap.vcxproj  evolplugin.sln
